--- a/spatial_plot_test.Rmd
+++ b/spatial_plot_test.Rmd
@@ -70,17 +70,17 @@ death_labels <- sprintf(
 
 # Set bins and colour pallete for plot
 bins <- c(0,50, 100, 200, 500, 1000, 2000)
-pal <- colorBin("YlOrRd", domain = test$num_deaths, bins = bins)
+pal <- colorBin("Purples", domain = test$num_deaths, bins = bins)
 
 
 leaflet(test, height = 600, width = 500) %>%
   setView(lng = -4.2026, lat = 57.8, zoom = 6, options = list()) %>%
   addPolygons(fillColor = ~pal(num_deaths),
-              weight = 1,
+              weight = 0.75,
               opacity = 1,
-              color = "white",
-              dashArray = "3",
-              fillOpacity = 0.7,
+              color = "black",
+              dashArray = "2",
+              fillOpacity = 0.9,
               highlightOptions = highlightOptions(color = "white", weight = 2,
                                                   bringToFront = TRUE),
   label = death_labels,
